[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixmux"
version = "0.1.0"
description = "Losslessly convert HTTP fixtures between HAR, VCR cassette, WireMock, and nock formats — share recorded interactions across language stacks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["har", "vcr", "wiremock", "nock", "fixtures", "http", "testing", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
fixmux = "fixmux.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/fixmux"
Repository = "https://github.com/JaydenCJ/fixmux"
Issues = "https://github.com/JaydenCJ/fixmux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
